menambah endpoint untuk getuserbyid
