# routes/api.php
@@ -28,6 +28,7 @@ Route::post('register', [AuthController::class, 'register']);
 Route::post('login', [AuthController::class, 'login']);
 
 Route::group(['middleware' => 'jwt.verify'], function ($router) {
+    Route::post('getUsersById/{usersId}', [AuthController::class, 'getUsersbyId']);
     Route::post('logout', [AuthController::class, 'logout']);
     Route::get('users', [UserController::class, 'getAllUsers']);
 
